tests/baselines/reference/parserSetAccessorWithTypeParameters1.errors.txt
tests/cases/conformance/parser/ecmascript5/Accessors/parserSetAccessorWithTypeParameters1.ts(2,8): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
tests/cases/conformance/parser/ecmascript5/Accessors/parserSetAccessorWithTypeParameters1.ts(2,8): error TS1094: An accessor cannot have type parameters.


==== tests/cases/conformance/parser/ecmascript5/Accessors/parserSetAccessorWithTypeParameters1.ts (2 errors) ====
    class C {
       set foo<T>(v) { }
           ~~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
           ~~~
!!! error TS1094: An accessor cannot have type parameters.
    }